syntax = "proto3";

package pb;

import "barber/barber.proto";


option go_package = "barbershop/src/pb/barber";


message CreateBarberEmployeesRequest{
    repeated BarberEmployee barber_employees = 1;
    int32 role_id = 2;
    string barber_shop_id = 3;
}

message CreateBarberEmployeesResponse {
    string message = 1;
}